# ds4-ops

./: .env.example  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: incident.yml  task.yml
docs/: architecture.md  history.md  infrastructure.md  ops.md  tuning.md
litellm/: config.yaml  docker-compose.yml
proxy/: auth.py  config.py  http_io.py  normalize.py  server.py  tee.py
scripts/: claude-ds4.cmd  code-ds4.cmd  ds4-proxy.sh  ds4-server.sh  ds4ctl.sh  litellm-start.cmd  setup-litellm.cmd
scripts/lib/: colorize.sh  launchd.sh  lifecycle.sh  load-dotenv.sh  paths.sh
tests/: test_feature-13-ds4-proxy.py
tests/feature-13-ds4-proxy/: test_auth.py  test_http_io.py  test_integration.py  test_normalize_dynamic.py  test_normalize_reminder.py  test_normalize_sort_apply.py  test_server.py
tests/feature-18-ds4ctl/: test-colorize.sh  test-ctrlc.sh  test-dispatch.sh  test-double-start.sh  test-launchd-stop.sh  test-log-toggle.sh  test-logs.sh  test-pid-lifecycle.sh  test-plist.sh  test-restart.sh  test-status.sh  test-stop-all.sh  test-uninstall.sh
