[project]
name = "ds4-proxy"
version = "0.1.0"
description = "ds4 reverse proxy: request normalization, HTTP framing, and auth"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
